SFDC Automation/src/objects/CompanyType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Ryder company type id mapping</description>
    <fields>
        <fullName>CompanyID__c</fullName>
        <label>CompanyID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CompanyType__c</fullName>
        <label>CompanyType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RyderID__c</fullName>
        <externalId>true</externalId>
        <label>RyderID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>CompanyTypeMapping</label>
</CustomObject>